<resources>

    <string name="app_name">BCI Voyager</string>
    <string name="app_name_set">BCI Voyager (Setting)</string>

    <string name="connectBluetooth">Connection Bluetooth</string>
    <string name="ScanBT">Scan en cours</string>

    <string name="title_activity_fullscreen">BCI Voyager (Fullscreen)</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="start">Start</string>
    <string name="scan">Find a device</string>
    <string name="scanAll">Find all devices</string>
    <string name="cancel">Cancel</string>

    <string name="device_name">Enter a device name</string>
    <string name="device_qrcode">Enter a device QR code</string>
    <string name="bluetooth_audio_streaming">Bluetooth Audio Streaming</string>

    <!-- bci Voyager -->
    <string name="osc_streaming">OSC Streaming</string>
    <string name="filexport_streaming">Export to CSV</string>
    <string name="P300_triggers">Triggers Activate</string>
    <string name="bluetooth_audio_connect">Connect audio BT</string>
    <string name="ip_address_name">Enter target ip address</string>
    <string name="ip_port">Enter Port</string>

    <string name="start_streaming">Start Streaming</string>
    <string name="stop_streaming">Stop Streaming</string>
    <string name="read_battery">Get Battery Level</string>

    <string name="connected">CONNECTED</string>
    <string name="welcome">WELCOME</string>

    <string name="scan_in_progress">Scan in progress </string>
    <string name="connect_in_progress">Connection in progress </string>

    <string name="scan_failed">Impossible to find devices </string>
    <string name="find_first_available_headset">The application is looking for the first available headset</string>
    <string name="cancel_failed">Cancel encountered a problem </string>
    <string name="connect_failed">Impossible to connect to </string>
    <string name="disconnect_failed">Impossible to disconnect from </string>
    <string name="wrong_device_name">Wrong name : must contains 10 digits </string>
    <string name="disconnected_headset">The headset have been disconnected </string>
    <string name="no_connected_headset">No connected headset </string>
    <string name="error_read_battery">An error occurred : impossible to get the battery level</string>


    // Bouton pour menu contextuel BCI Voyager
    <string name="v_startVoyager">START</string>  // Launch splash screen
    <string name="v_restart">Relaunch</string>    // Restart trial
    <string name="v_debug">Debug</string>         // Debug by Hans
    <string name="v_demo">Demo</string>           // Melomind demo app
    <string name="v_quit">Quit</string>           // Kill app



    // Text app BCI Voyager

    //Launchscreen (activity1)
    <string name="welcomeMsg">"Bonjour et bienvenue dans l'expérience"</string>
    <string name="refcoglab">"by CogLab, NeuroTechX Paris"</string>
    <string name="with">"avec"</string>
    <string name="partner">"Partenaires"</string>

    //Connexion (activity2)
    <string name="t_connect">"Connexion"</string>
    <string name="d_point">" . . . "</string>

    //Calibration (activity3)
    <string name="t_calibration">"Calibration"</string>
    <string name="demarrer">"Démarrer"</string>
    <string name="qualities">quality</string>
    <string name="qualities_p3">p3</string>
    <string name="qualities_p4">p4</string>

    //Lancement de l'expérience (activity4)
    <string name="t_launch">"Launch"</string>
    <string name="choice">"&lt;  5  &gt;"</string>
    <string name="ready">"Ready ?"</string>
    <string name="btn_slowdemo">"Normal (7')"</string>
    <string name="btn_fastdemo">"Fast (2')"</string>
    <string name="btn_ultrafastdemo">"Ultra Fast (1')"</string>
    <string name="look">"Look carefully at the following pictures"</string>

    //Page de résultats
    <string name="t_result">"Results"</string>
    <string name="txt_thx">"Merci, l’expérience est terminée !"</string>
    <string name="txt_disc_result">"Découvrons vos résultats :"</string>

    <string name="c1">"C1 Aventure et plein air / Adventure and nature"</string>
    <string name="c2">"C2 Vacances en famille / Family vacation"</string>
    <string name="c3">"C3 Santé et bien être / Health and well-being"</string>
    <string name="c4">"C4 Plage, soleil et baignades / Beach and sun"</string>
    <string name="c5">"C5 Neige et sport d’hivers / Snow and ski"</string>

    //Page de paramètres
    <string name="t_setting">"BCI Voyager Settings"</string>
    <string name="v_settings">Settings</string>   // Renvoi vers la page de paramètres
    <string name="v_ip">Adresse IP</string>



</resources>
