<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    android:background="@color/black_overlay"
    tools:context="com.example.BCIVoyager.Activity1Launchscreen"
    android:id="@+id/start_xp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dip"
        android:text="@string/t_result"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_thx"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_disc_result"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white" />

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip"
        android:layout_marginTop="50dip"
        android:stretchColumns="1">

        <View
            android:layout_height="2dip"
            android:background="@color/white"
        />
        <TableRow>
            <TextView
                android:text="1"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginRight="40dip"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/categ1"
                android:text="@string/c1"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_column="1"
                android:padding="3dip"
                />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="@color/white"
        />
        <TableRow>
            <TextView
                android:text="2"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginRight="40dip"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/categ2"
                android:text="@string/c2"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_column="1"
                android:padding="3dip"
                />
        </TableRow>
        <View
            android:layout_height="2dip"

            android:background="@color/white"
            />
        <TableRow>
            <TextView
                android:text="3"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginRight="40dip"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/categ3"
                android:text="@string/c3"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_column="1"
                android:padding="3dip"
                />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="@color/white"
            />
        <TableRow>
            <TextView
                android:text="4"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginRight="40dip"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/categ4"
                android:text="@string/c4"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="3dip"
                />
        </TableRow>
        <View
            android:layout_height="1dip"
            android:background="@color/white"
            />
        <TableRow>
            <TextView
                android:text="5"
                android:textSize="40sp"
                android:gravity="center"
                android:layout_marginRight="40dip"
                android:textColor="@color/white"
                />
            <TextView
                android:id="@+id/categ5"
                android:layout_column="1"
                android:layout_span="2"
                android:text="@string/c5"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:padding="3dip"
                />
        </TableRow>
        <View
            android:layout_height="1dip"
            android:background="@color/white"
            />
    </TableLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:layoutMode="clipBounds">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/menuFloating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:srcCompat="@drawable/coglab_transparent"
            android:background="@color/green_strong_coglab"
            android:layout_margin="15dip"/>
    </RelativeLayout>
</LinearLayout>