<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    android:background="@color/black_dark"
    tools:context="com.example.BCIVoyager.Activity1Launchscreen"
    android:id="@+id/start_xp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dip"
        android:text="@string/t_launch"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="40dip"
        android:text="@string/look"
        android:textSize="50sp"
        android:gravity="center"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/launchXP"
        android:text="@string/demarrer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dip"
        android:padding="20dip"
        android:background="@color/light_blue"
        android:textColor="@color/white"
        android:textSize="22sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/green_coglab"
        android:orientation="vertical">

        <Button
            android:id="@+id/c_start"
            android:layout_width="240dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:text="@string/v_startVoyager"
            android:background="@color/light_blue"
            android:elevation="10dp"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentBottom="true"
            android:padding="20dp"
            android:clickable="true"
            app:srcCompat="@drawable/coglab_transparent"
            android:background="@color/green_strong_coglab"
            android:layout_marginBottom="15dip"/>

    </RelativeLayout>
</LinearLayout>