<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_dark"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    tools:context="com.example.BCIVoyager.Activity3Calibration">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dip"
        android:text="@string/t_calibration"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dip"
        android:gravity="center">

        <TextView
            android:id="@+id/valueP3"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/qualities_p3"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/melopics"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            app:srcCompat="@drawable/melomind_pics" />

        <TextView
            android:id="@+id/valueP4"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:text="@string/qualities_p4"
            android:textSize="50sp"
            android:gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>



    <ProgressBar
        android:id="@+id/progressBar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:progress="@android:integer/status_bar_notification_info_maxnum"
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center" />

</LinearLayout>
