<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    android:background="@color/black_dark"
    tools:context=".Activity2Connexion"
    android:id="@+id/startViaConnexion">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:text="@string/t_launch"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dip"
            android:gravity="center">

                <ImageView
                    android:id="@+id/logomelomind"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/logo_melomind_mini"
                    android:contentDescription="Logo Melomind"/>

                <TextView
                    android:id="@+id/partner"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:text="@string/d_point"
                    android:textSize="50sp"
                    android:gravity="center"
                    android:textColor="@color/white" />

                <ImageView
                    android:id="@+id/logo_bt"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:srcCompat="@drawable/logo_bluetooth_white" />
        </LinearLayout>

        <Button
            android:id="@+id/scanButton"
            android:text="@string/connectBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="100dip"
            android:padding="20dip"
            android:background="@color/light_blue"
            android:textColor="@color/white"
            android:textSize="22sp"/>

</LinearLayout>
