<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="landscape"
    android:background="@color/white"
    tools:context=".DemoSDK">

    <Button
        android:id="@+id/scanButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_blue"
        android:elevation="10dp"
        android:text="@string/scan"

        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottomButton"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopButton" />

    <EditText
        android:id="@+id/deviceNameField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/device_name"
        android:inputType="number"
        android:singleLine="true"

        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottomName"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/deviceQrCodePrefix"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopName" />

    <EditText
        android:id="@+id/deviceQrCodeField"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/device_qrcode"
        android:inputType="text"
        android:singleLine="true"

        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottomQrCode"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toEndOf="@+id/deviceQrCodePrefix"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopQrCode" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:src="@drawable/cross"

        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomImage"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTopImage" />

    <Spinner
        android:id="@+id/deviceNamePrefix"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottomName"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEndPrefix"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopName" />

    <Spinner
        android:id="@+id/deviceQrCodePrefix"
        android:layout_width="wrap_content"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="@+id/guidelineBottomQrCode"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEndPrefix"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@+id/guidelineTopQrCode" />

    <Switch
        android:id="@+id/connectAudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_audio_streaming"
        app:layout_constraintBottom_toBottomOf="@id/guidelineBottomSwitch"
        app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@+id/guidelineStart"
        app:layout_constraintTop_toTopOf="@id/guidelineTopSwitch" />


    <!-- VERTICAL GUIDELINES-->

    <android.support.constraint.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEndScanButton"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:layout_constraintGuide_percent="0.47" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEndPrefix"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineStartCancelButton"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:layout_constraintGuide_percent="0.53" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        custom:layout_constraintGuide_percent="0.9" />


    <!-- HORIZONTAL GUIDELINES-->

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopImage"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottomImage"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_percent="0.53" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopName"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottomName"
        app:layout_constraintGuide_begin="388dp"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBottomImage"
        custom:layout_constraintGuide_percent="0.53" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottomName"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_percent="0.63" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopQrCode"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="73dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottomQrCode"
        app:layout_constraintGuide_begin="461dp"
        app:layout_constraintTop_toBottomOf="@+id/guidelineBottomName"
        custom:layout_constraintGuide_percent="0.63" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottomQrCode"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineTopSwitch"
        app:layout_constraintGuide_begin="534dp"
        app:layout_constraintTop_toBottomOf="@+id/guidelineTopQrCode"
        custom:layout_constraintGuide_percent="0.73" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopButton"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="74dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottomButton"
        app:layout_constraintGuide_begin="603dp"
        app:layout_constraintTop_toBottomOf="@+id/scanButton"
        custom:layout_constraintGuide_percent="0.825" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottomButton"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_percent="0.925" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineTopSwitch"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_percent="0.75" />


    <android.support.constraint.Guideline
        android:id="@+id/guidelineBottomSwitch"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        custom:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>
